--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex,nofollow" />
     <title>portfolio</title>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script type="module" src="js/main.js"></script>
