--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>portfolio</title>
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script type="module" src="js/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -17,20 +20,24 @@
     </header>
   
     <main>
+      <h2>制作実績</h2>
+      <p class="lead">2019～2025年に制作したものからいくつかをピックアップしています。<br>
+      コーディングは主にhtml/cssを担当。開発環境：Compass、Vite。
+      ※Vue、React＋TailwindCSS、Astroでの制作経験もあります（一番下の案件がReact＋TailwindCSSでした））
+      </p>
+
       <ul>
-        <li><a href="https://www.nhn-japan.com/" target="_sample"><p>NHN JAPAN株式会社<span>2019年制作　html/css</span></p></a></li>
-        <li><a href="https://yokai-punipuni.jp/" target="_sample"><p>妖怪ウォッチ ぷにぷに<span>2019年制作　html/css</span></p></a></li>
-        <li><a href="https://app.nhn-playart.com/compass/" target="_sample"><p>#コンパス 戦闘摂理解析システム<span>2021年制作　html/css＋一部js</span></p></a></li>
-        <li><a href="https://www.nhn-playart.com/" target="_sample"><p>NHN PlayArt株式会社<span>2022年制作　html/css＋一部js</span></p></a></li>
-        <li><a href="https://app.nhn-playart.com/compass/jinrou/" target="_sample"><p>#コンパス人狼<span>2023年制作　html/css＋一部js</span></p></a></li>
-        <li><a href="https://recruit.nhn-japan.com/benefit" target="_sample"><p>NHN Group リクルートサイト<span>2025年制作　React/Tailwindcss</span></p></a></li>
+        <li><a href="https://yokai-punipuni.jp/" target="_sample"><span class="tit">妖怪ウォッチ ぷにぷに<small>2019年制作</small></span></a></li>
+        <li><a href="https://app.nhn-playart.com/compass/" target="_sample"><span class="tit">#コンパス 戦闘摂理解析システム<small>2021年制作</small></span></a></li>
+        <li><a href="https://app.nhn-playart.com/compass/event/primeart/" target="_sample"><span class="tit">#コンパス プライムアート展<small>2021年制作</small></span></a></li>
+        <li><a href="https://www.nhn-playart.com/" target="_sample"><span class="tit">NHN PlayArt株式会社<small>2022年制作</small></span></a></li>
+        <li><a href="https://app.nhn-playart.com/compass/jinrou/" target="_sample"><span class="tit">#コンパス人狼<small>2023年制作</small></span></a></li>
+        <li><a href="https://recruit.nhn-japan.com/benefit" target="_sample"><span class="tit">NHN Group リクルートサイト<small>2025年制作</small></span></a></li>
       </ul>
     </main>
-    
-    <div><iframe src="https://hub.vroid.com/characters/1432905550544634438/models/8318482806048109400" width="600" height="400" frameborder="0"></iframe></div>
 
     <footer>
-      <p>portfolio @2025/hatano-yumi</p>
+      <small class="text">portfolio @2025 hatano-yumi</small>
     </footer>
 
   </body>
