--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <scriptt src="js/jquery-3.6.0.min.js"></scriptt>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/jquery-3.6.0.min.js"></script>
+    <script type="module" src="js/main.js"></script>
   </head>
 
   <body>
