--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
+    <style>
+      @import url("css/main.css");
+    </style>
   </head>
 
   <body>
@@ -22,9 +24,10 @@
   
     <main>
       <h2>制作実績</h2>
-      <p class="lead">2019～2025年に制作したものからいくつかをピックアップしています。<br>
-      コーディングは主にhtml/cssを担当。開発環境：Compass、Vite。
-      ※Vue、React＋TailwindCSS、Astroでの制作経験もあります（一番下の案件がReact＋TailwindCSSでした））
+      <p class="lead">前職在職中に制作したものから現在も運用中または閲覧可能なものをピックアップしました。<br>
+      コーディングは主にHTML/CSS（Sass）を担当。<br>
+      javascriptはあまり得意ではありませんがReact (Next.js)、Vue (Nuxt)、Astroの使用経験があります。<br>
+      バージョン管理にはGitHub、GitLab、svnを使用。エディタはVSCodeを使用していました。
       </p>
 
       <ul>
@@ -38,7 +41,7 @@
     </main>
 
     <footer>
-      <small class="text">portfolio @2025 hatano-yumi</small>
+      <small class="text">portfolio @2026 hatano-yumi</small>
     </footer>
 
   </body>
